--- a/eComm.PERSISTENCE/eComm.PERSISTENCE.csproj
+++ b/eComm.PERSISTENCE/eComm.PERSISTENCE.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
